@@ -406,8 +406,11 @@
 # Default authentication and topic access control
 # -----------------------------------------------------------------
 
-# Control access to the broker using a password file. The file is a
-# text file of lines in the format:
+# Control access to the broker using a password file. This file can be
+# generated using the mosquitto_passwd utility. If TLS support is not compiled
+# into mosquitto (it is recommended that TLS support should be included) then
+# plain text passwords are used, in which case the file should be a text file
+# with lines in the format:
 # username:password
 # The password (and colon) may be omitted if desired, although this 
 # offers very little in the way of security.
